# django-oscar-reports

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  docker-compose.yml  pyproject.toml  renovate.json  setup.py  tox.ini
.github/: copilot-instructions.md
oscarreports/: admin.py  apps.py  forms.py  models.py  tables.py  tasks.py  views.py
oscarreports/migrations/: 0001_initial.py  0002_alter_report_task_id.py
oscarreports/templates/oscar/dashboard/reports/: index.html  report_confirm_delete.html  report_row_date_range.html  report_row_filesize.html
oscarreports/tests/: test_forms.py  test_models.py  test_views.py
sandbox/: celery.py  settings.py  urls.py
sandbox/sandbox/: celery.py  settings.py  urls.py
src/oscarreports/: __init__.py  admin.py  apps.py  forms.py  handlers.py  models.py  settings.py  tables.py  tasks.py  utils.py  views.py
src/oscarreports/locale/es/LC_MESSAGES/: django.po
src/oscarreports/migrations/: 0001_initial.py  0002_alter_report_task_id.py
src/oscarreports/templates/oscar/dashboard/reports/: index.html  report_confirm_delete.html  report_row_actions.html
src/oscarreports/templates/oscar/dashboard/reports/emails/: report_completed_alert_body.html  report_completed_alert_body.txt  report_completed_alert_subject.txt
src/oscarreports/tests/: test_forms.py  test_models.py  test_tasks.py  test_views.py
