[build-system]
requires = [ "poetry-core>=2.1.2",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-oscar-reports"
version = "2.5.0"
description = "An extension on-top of django-oscar that improves the Oscar Dashboard's report generation system"
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.rst"
homepage = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-reports"
repository = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-reports"
license = "ISC"

[[tool.poetry.packages]]
include = "oscarreports"
from = "src"

[tool.poetry.dependencies]
python = "^3.12"
Django = ">=4.2"
django-oscar = ">=4.0,<4.1"
django-stubs-ext = ">=5.1.3"
celery = { version = ">=5.5.1", optional = true }
django-tasks = { version = ">=0.7.0", optional = true }

[tool.poetry.extras]
celery = ["celery"]
django-tasks = ["django-tasks"]

[tool.poetry.group.dev.dependencies]
coverage = "7.8.2"
flake8 = "7.2.0"
freezegun = "1.5.2"
psycopg2-binary = "2.9.10"
PyYAML = "6.0.2"
sorl-thumbnail = "12.11.0"
tox = "4.26.0"
unittest-xml-reporting = "3.2.0"
django-webtest = "1.9.13"
WebTest = "3.0.6"
mypy = "1.16.0"
django-stubs = "5.2.0"
types-psycopg2 = "^2.9.21.20250121"
celery-types = "0.23.0"

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "django_tables2.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "oscar.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "psycopg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "webtest.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "sandbox.settings"

[tool.isort]
profile = "black"
from_first = true

[tool.coverage.run]
branch = true
source_pkgs = ["oscarreports"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
