[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-oscar-reports"
version = "2.5.1"
description = "An extension on-top of django-oscar that improves the Oscar Dashboard's report generation system"
readme = "README.rst"
license = { text = "ISC" }
dependencies = [
    "Django (>=4.2)",
    "django-oscar (>=4.0,<4.1)",
    "django-stubs-ext (>=5.2.6)",
]
requires-python = ">=3.12"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-reports"
Repository = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-reports"

[project.optional-dependencies]
celery = ["celery (>=5.5.3)"]
django-tasks = ["django-tasks (>=0.8.1)"]

[dependency-groups]
dev = [
    "coverage (==7.10.7)",
    "ruff (>=0.13.3)",
    "freezegun (==1.5.5)",
    "psycopg2-binary (==2.9.11)",
    "PyYAML (==6.0.3)",
    "sorl-thumbnail (==12.11.0)",
    "tox (==4.30.3)",
    "unittest-xml-reporting (==3.2.0)",
    "django-webtest (==1.9.13)",
    "WebTest (==3.0.6)",
    "mypy (==1.18.2)",
    "django-stubs (==5.2.6)",
    "types-psycopg2 (>=2.9.21.20250915,<3)",
    "celery-types (==0.23.0)",
    "tox-uv>=1.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["oscarreports"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true", "uv build"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "django_tables2.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "oscar.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "psycopg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "webtest.*"
ignore_missing_imports = true


[tool.django-stubs]
django_settings_module = "sandbox.settings"

[tool.isort]
profile = "black"
from_first = true

[tool.coverage.run]
branch = true
source_pkgs = ["oscarreports"]

[tool.coverage.report]
show_missing = true
ignore_errors = true

[tool.ruff.lint.isort]
from-first = true
